# nixxy

./: .Transformers.hs.kak.BINdqR  .bashrc  .gitignore  .gitmodules  Article.hs  CHANGELOG.md  Code.hs  MiniHask.hs  Nixxy.hs  README.md  Test.hs  Transformers.hs  UI.hs  View.hs  chatGPT.hs  check.py  configuration.nix  console.hs  doc.md  f  ghci.md  hardware-configuration.nix  kak.hs  nixxy.cabal  output.txt  run.sh  scratch.hs  shell.nix  shell2.nix
.devlogs/: starting.md
Arnold/: terminator
Arnold/terminatorlib/: config.py  notebook.py  preferences.glade  terminal.py  terminator.py  util.py
Arnold/terminatorlib/old/: ipc.py
actions/: remember.py
app/: Main.hs  Script  Script.hi  Script.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.5/: nixxy-0.1.0.0-inplace.conf  package.cache
docs/: plugins.md
gears/: kak-lsp  new.hs
gears/Kakoune/: Main.lhs  kakrc  literate-haskell.kak  maww.kak
gears/kak/: asdf.txt  kakrc  lsp.kak  my.py
journal/: starting.md
old/: shell.nix
old.code/: README.md
old.code/snips/bash/: rebuild.sh
parts-box/: commit.sh  example.nix  old.shell.nix
src/: Arnold.hs  Commands.hs  Core.hs  MyLib.hs  Nixxy.hs  NixxySay.hs  Note  Note.hi  Note.hs  Term.hs  UI.hs
src/Commands/: MakeFile.hs
test/: Main.hs  shell.nix
testcode/: Nixxy.hs
tst/: Util.hi  tst.hs
