cabal-version:      3.0
name:               nixxy
version:            0.1.0.0
synopsis:           Set of cmd line tools to get things done faster, that's it.
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             arpiku
maintainer:         akphysics03@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

    
common common-dependencies
  build-depends: base ^>=4.18.2.1,brick, dbus, process

library
    import:           warnings, common-dependencies
    exposed-modules:  Nixxy NixxySay Arnold 
    hs-source-dirs:   src
    default-language: GHC2021

executable nixxy
    import:           warnings, common-dependencies
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends: nixxy
    default-language: GHC2021

test-suite nixxy-test
    import:           warnings, common-dependencies

    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs

